--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -11,7 +11,7 @@
     &__slider {
         display: grid !important;
         grid-template-columns: auto 1fr auto;
-        grid-column-gap: 20px;
+        column-gap: 20px;
     }
     &__text {
         color: #3f4244;
