--- a/scss/ship.scss
+++ b/scss/ship.scss
@@ -8,7 +8,7 @@
     &__wrapper {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-column-gap: 30px;
+        column-gap: 30px;
     }
     &__item {
         background-color: #fff;
