--- a/scss/why.scss
+++ b/scss/why.scss
@@ -10,7 +10,7 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-auto-rows: 1fr 1fr;
-        grid-gap: 34px;
+        gap: 34px;
     }
     &__card {
         max-width: 261px;
